various changes to files, incorporating user made polls. Cannot remember most changes since last active

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/claudgent/voting-app"
   },
-  "homepage": "http://www.clementinejs.com/",
+  "homepage":"",
   "bugs": "https://github.com/claudgent/voting-app/issues",
   "scripts": {
     "start": "node server.js"
